SERVER-29011 Don't use side sessions during compacts in the WT KV Engine

(cherry picked from commit 584d4a6a25ce56b07f13247b3ce7fe298b4a111e)